# vncman

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python.yml
vncman/: logger.py  osutil.py  pathutil.py  vncserver.py
vncman/config/: color.py  config.py
