[tool.poetry]
name = "vncman"
version = "0.1.0"
description = "CLI for VNC server management"
authors = ["arumakan1727 <33191176+arumakan1727@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "vncman" },
]

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.0.292"
pyright = "^1.1.331"
pyink = "^23.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
# see: https://docs.astral.sh/ruff/rules/
select = [
  "E",  # pycodestyle (Errors)
  "W",  # pycodestyle (Warnings)
  "F",  # pyflakes
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # bugbear
  "ANN", # flake8-annotations
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "SIM", # flake8-simplify
]
ignore = [
  "ANN101", # missing-type-self
]
